2008.04.21: David Nichols
	* added QoreHashNode::empty() and QoreListNode::empty() functions

2008.04.19: David Nichols
	* added a public QoreFile::preallocate() method (c++ class)

2008.04.18: David Nichols
	* qt: QGraphicsItem infrastructure additions, fixes, other new classes

2008.04.17: David Nichols
	* added bzip functionality to library: bzip2(), bunzip2_to_string() and
	  bunzip2_to_binary() functions and tests in test/test.q

2008.04.16: David Nichols
	* qt: new classes, fixes, made dragging the cannon's barrel in the
	  tutorial.q example program finally work properly

2008.04.15: David Nichols
	* opengl: added new example "atlantis.q"

2008.04.10: David Nichols
	* added chown() and lchown() functions
	* added File::lock() method based on flock
	* added File::chown() method based on fchown()
	* opengl: added examples/opengl/opengl-logo.q 

2008.04.09: David Nichols
	* glut: added mappings for the entire glut API from glut.h

2008.04.08: David Nichols
	* glut: started adding glut module
	* opengl: added gears.q example of classic 3 spinning gears
	* opengl: renamed old slow gears example to gears2.q
	* opengl: added mprph3d.q script

2008.04.07: David Nichols
	* opengl: started adding opengl module

2008.04.01: David Nichols
	* qt: QLayout fixes, QLayoutItem and other new classes added

2008.03.31: David Nichols
	* qt: bug fixes
	* qt: added QStackedLayout class
	* qt: started adding GL support

2008.03.26: David Nichols
	* qt: massive updates to ensure correct object lifecycle management and
	  to move QObject subclass implementations into templated classes from
	  messy include files
	* updated Qore's object subsystem to allow objects to postpone deletion
	  when going out of scope if the private data is managed externally to
	  qore and the object must remain valid for the lifetime of the private
	  data

2008.03.22: David Nichols
	* qt: implemented new classes, bug fixes
	* qt: added findfiles.q and standarddialogs.q examples