@@ -2,7 +2,7 @@
 
 %require-our
 
-%requires opengl
+# the glut module automatically loads the opengl module
 %requires glut
 
 #/*
